--- a/Src/Web/Features/Shared/_Layout.cshtml
+++ b/Src/Web/Features/Shared/_Layout.cshtml
@@ -8,8 +8,7 @@
     <title>@ViewData["Title"] - Web</title>
 </head>
 <body>
-
-
+    <partial name="_Navigation"/>
     <div class="container body-content">
         @RenderBody()
         <hr />
